--- a/src/app/final-course/courses/courses.component.html
+++ b/src/app/final-course/courses/courses.component.html
@@ -23,7 +23,7 @@
                             <p class="card-text" >
                                 {{pages.body}}
                             </p>
-                             <div class="btnLink" (click)='goToPage()' routerLink='/final-course/course-object'>
+                             <div class="btnLink" (click)='goToPage(score+ 1)' routerLink='/final-course/course-object'>
                                  <a  style=" color: #fff;">{{pages.btnlinkText}}</a>
                              </div>
                             <div class="progress">
